--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "midnight-jazz-syntax",
   "theme": "syntax",
-  "version": "1.2.1",
-  "description": "A Lunarized-inspired, slightly jazzed-up theme for those dark nights.",
+  "version": "1.3.0dev",
+  "description": "A jazzed-up theme for those dark nights.",
   "repository": "https://github.com/plaidphantom/midnight-jazz-syntax",
   "license": "MIT",
   "engines": {
