--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "midnight-jazz-syntax",
   "theme": "syntax",
-  "version": "1.3.0dev",
+  "version": "1.2.1",
   "description": "A jazzed-up theme for those dark nights.",
   "repository": "https://github.com/plaidphantom/midnight-jazz-syntax",
   "license": "MIT",
