--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "midnight-jazz-syntax",
   "theme": "syntax",
   "version": "1.2.1",
-  "description": "A jazzed-up theme for those dark nights.",
+  "description": "A jazzy theme for those dark nights.",
   "repository": "https://github.com/plaidphantom/midnight-jazz-syntax",
   "license": "MIT",
   "engines": {
